# planning-lite

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  copier.yml  pyproject.toml
docs/: ARCHITECTURE.ru.md  MIGRATION_FROM_V2_3.ru.md  OPERATOR_WORKFLOW.ru.md  UPDATABLE_INSTALLATION.ru.md
scripts/: bootstrap_repo.ps1  test_template_update.py
src/planning_lite/: __init__.py  cli.py
template/: AGENTS.md
template/.planning/: ACTIVE.md  AGENT_PROFILE.yml.jinja  CONFIG.yml  README.md  REFERENCES.md  WORKFLOW.md
template/.planning/adapters/: README.md  registry.yml
template/.planning/assessments/: README.md  TEMPLATE.md
template/.planning/changes/: README.md
template/.planning/control/: AGENT_ADAPTER_CONTRACT.md  AGENT_PORTABILITY.md  APPROVAL_GATES.md  CHANGE_AMENDMENT.md  CHANGE_CLOSURE.md  CHANGE_DEFINITION.md  CHANGE_EXECUTION.md  CHANGE_LIFECYCLE.md  CHANGE_PLANNING.md  CHANGE_READINESS.md  CHANGE_SCAFFOLD.md  CONFIG_RESOLUTION.md  CONTEXT_POLICY.md  DRIFT_POLICY.md  GIT_CHANGE_REVIEW.md  MODE_ROUTER.md  PROJECT_BOOTSTRAP.md  PROJECT_STATE_REFRESH.md  RECOMMENDATION_LIFECYCLE.md  RECOVERY.md  ROOT_ROUTER.md  SESSION_CHECKPOINT.md  SKILL_USAGE_LOGGING.md  STATE_OWNERSHIP.md  WAYFINDING.md
template/.planning/decisions/: INDEX.md  README.md  TEMPLATE.md
template/.planning/disciplines/: CODEBASE_DESIGN.md  CODE_REVIEW.md  DELIVERY_SLICES.md  DOMAIN_MODELING.md
template/.planning/docs/: ARCHITECTURE.md  CODEX_CLI_CHEATSHEET.ru.md  (+6 more)
tests/: test_cli.py  test_simple_install.py  test_template.py  test_template_source.py  test_versioning.py
(+82 files in other folders)
